[Refactoring] Drop java warnings